@@ -194,7 +194,6 @@ class AtlasProdJobThrottler (JobThrottlerBase):
             if nNotRun+nDefine < max(nQueueLimit,nRunning) or (totWalltime != None and totWalltime < minTotalWalltime):
                 tmpLog.debug(msgHeader+" not enough jobs queued")
                 self.notEnoughJobsQueued()
-                self.setMaxNumJobs(nJobsInBunch)
         msgBody = "PASS - priority limit={0}".format(limitPriorityValue)
         tmpLog.debug(msgHeader+" "+msgBody)
         return self.retUnThrottled
